--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
     </main>
    
-    <footer>
+    <footer><h1>Laimesrats</h1>
         <!-- <div class="button-row">
             <button class="golden-button">Button 1</button>
             <button class="golden-button">Button 2</button>
