--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/stylesfirework.css">
     <script src="js/scripts.js" defer></script>
-    <title>Wheel of Fortune</title>
+    <title>Najaušibu rats</title>
 </head>
 <body>
     <header>
-        <h1>Laimesrats</h1>
+        <h1>Nejaušibu rats</h1>
     </header>
 
     <main>
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="column right">
+        <div class="column right"><div class="nos">Nosacījumi</div>
             <div class="updiv">
                 <div class="firework" id="firework1">
                     <div class="explosion"></div>
@@ -68,23 +68,38 @@
                     <div class="explosion"></div>
                     <div class="explosion"></div>
                 </div>
+                <div class="firework" id="firework3">
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                    <div class="explosion"></div>
+                </div>
             </div>
             <div class="inputs-container">
-                <input type="text" id="Name1Input" placeholder="IZVĒLE_1">
-                <input type="text" id="Name2Input" placeholder="IZVĒLE_2">
-                <input type="text" id="Name3Input" placeholder="IZVĒLE_3">
-                <input type="text" id="Name4Input" placeholder="IZVĒLE_4">
-                <input type="text" id="Name5Input" placeholder="IZVĒLE_5">
-                <input type="text" id="Name6Input" placeholder="IZVĒLE_6">
-                <input type="text" id="Name7Input" placeholder="IZVĒLE_7">
-                <input type="text" id="Name8Input" placeholder="IZVĒLE_8">
-                <br>
+                <input type="text" id="Name1Input" placeholder="IZVĒLE_1" style="background-color: #50fca6;">
+                <i class="fa-regular fa-moon fa-2xl"></i><input type="text" id="Name2Input" placeholder="IZVĒLE_2" style="background-color: #4caf50;">
+                <i class="fa-regular fa-face-smile fa-2xl"></i><input type="text" id="Name3Input" placeholder="IZVĒLE_3" style="background-color: #f44336;">
+                <i class="fa-regular fa-envelope fa-2xl"></i><input type="text" id="Name4Input" placeholder="IZVĒLE_4" style="background-color: #e91e63;">
+                <i class="fa-regular fa-image fa-2xl"></i><input type="text" id="Name5Input" placeholder="IZVĒLE_5" style="background-color: #fbff05;">
+                <i class="fa-regular fa-circle-xmark fa-2xl"></i><input type="text" id="Name6Input" placeholder="IZVĒLE_6" style="background-color: #ffd23c;">
+                <i class="fa-regular fa-circle-user fa-2xl"></i><input type="text" id="Name7Input" placeholder="IZVĒLE_7" style="background-color: #3965c4;">
+                <i class="fa-regular fa-hand fa-2xl"></i><input type="text" id="Name8Input" placeholder="IZVĒLE_8" style="background-color: #2196f3;">
+                <i class="fa-regular fa-snowflake fa-2xl"></i><br>
                 <button class="smallb" id="sendBtn">Iesniegt</button>
                 <button class="smallb" id="refreshBtn">Nodzēst</button>
             </div>
+        </div>
     </main>
    
-    <footer><h1>Laimesrats</h1>
+    <footer><h1>Viss jau ir iepriekš zināms</h1>
         <!-- <div class="button-row">
             <button class="golden-button">Button 1</button>
             <button class="golden-button">Button 2</button>
